kubernetes/client-deployment copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-react
  labels:
    cloud.googleapis.com/location: "europe-central2"
  annotations:
    run.googleapis.com/launch-stage: BETA
    run.googleapis.com/description: sample tutorial service
    run.googleapis.com/ingress: all
spec:
  selector:
    matchLabels:
      app: portfolio-react
  replicas: 1
  template:
    metadata:
      labels:
        app: portfolio-react
      annotations:
        run.googleapis.com/container-dependencies: '{"nginx": ["client"]}'
    spec:
      containers:
        - image: maksymposkannyi/portfolio-react-prod-client
        name: client
        startupProbe:
          timeoutSeconds: 240
          periodSeconds: 240
          failureThreshold: 1
          tcpSocket:
            port: 3000
        resources:
          limits:
            memory: "1Gi"
