kubernetes/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-react #label
      group: client
  template:
    metadata:
      labels:
        app: portfolio-react #label
        group: client
    spec:
      containers:
      - name: client
        imagePullPolicy: Always
        image: maksymposkannyi/portfolio-react-prod-client
