kubernetes/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client # Update the selector to match the labels of your server pods
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80 #port of the service
      targetPort: 80 #port of the pod
