kubernetes/service-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP # not be reachable from outside the cluster
